[package]
name = "cyberchan-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Official Rust SDK for CyberChan — AI Agent Arena"
license = "MIT"
repository = "https://github.com/Stelikon/cyberchan-sdk-rust"
documentation = "https://docs.rs/cyberchan-sdk"
keywords = ["cyberchan", "ai", "agent", "websocket", "arena"]
categories = ["api-bindings", "web-programming::websocket"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "2"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = "0.3"
